workspace_kk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:49:05 **** Incremental Build of configuration Debug for project DDL_Lab5_UART ****
make -r -j2 all 
Building file: ../src/uart_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -D__USE_CMSIS -DDEBUG -D__CODE_RED -I../cmsis -I../config -I../driver -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/uart_main.d" -MT"src/uart_main.o" -MT"src/uart_main.d" -o "src/uart_main.o" "../src/uart_main.c"
../src/uart_main.c: In function 'setLEDON':
../src/uart_main.c:360:3: error: expected expression before '}' token
   }
   ^
make: *** [src/uart_main.o] Error 1
src/subdir.mk:18: recipe for target 'src/uart_main.o' failed
14:49:30 **** Incremental Build of configuration Debug for project DDL_Lab5_UART ****
make -r -j2 all 
Building file: ../src/uart_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -D__USE_CMSIS -DDEBUG -D__CODE_RED -I../cmsis -I../config -I../driver -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/uart_main.d" -MT"src/uart_main.o" -MT"src/uart_main.d" -o "src/uart_main.o" "../src/uart_main.c"
Finished building: ../src/uart_main.c
 
Building target: uart.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -Xlinker -Map=uart.map -Xlinker --gc-sections -mcpu=cortex-m0 -mthumb -T "../linker/lpc1114_flash_crp.ld" -o "uart.axf"  ./startup/cr_startup_lpc11.o  ./src/uart_main.o  ./driver/adc.o ./driver/can.o ./driver/crp.o ./driver/gpio.o ./driver/timer32.o ./driver/uart.o  ./cmsis/core_cm0.o ./cmsis/system_LPC11xx.o   
Finished building target: uart.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size uart.axf; arm-none-eabi-objcopy -O binary uart.axf uart.bin ; checksum -p LPC1114_302 -d uart.bin;
   text	   data	    bss	    dec	    hex	filename
   3616	     16	     84	   3716	    e84	uart.axf
Written checksum 0xefffd637 at offset 0x1c in file uart.bin
Previous value 0x00000000 at offset 0x1c in file uart.bin
 
14:52:24 **** Incremental Build of configuration Debug for project DDL_Lab5_UART ****
make -r -j2 all 
Building file: ../src/uart_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -D__USE_CMSIS -DDEBUG -D__CODE_RED -I../cmsis -I../config -I../driver -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/uart_main.d" -MT"src/uart_main.o" -MT"src/uart_main.d" -o "src/uart_main.o" "../src/uart_main.c"
Finished building: ../src/uart_main.c
 
Building target: uart.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -Xlinker -Map=uart.map -Xlinker --gc-sections -mcpu=cortex-m0 -mthumb -T "../linker/lpc1114_flash_crp.ld" -o "uart.axf"  ./startup/cr_startup_lpc11.o  ./src/uart_main.o  ./driver/adc.o ./driver/can.o ./driver/crp.o ./driver/gpio.o ./driver/timer32.o ./driver/uart.o  ./cmsis/core_cm0.o ./cmsis/system_LPC11xx.o   
Finished building target: uart.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size uart.axf; arm-none-eabi-objcopy -O binary uart.axf uart.bin ; checksum -p LPC1114_302 -d uart.bin;
   text	   data	    bss	    dec	    hex	filename
   3620	     16	     84	   3720	    e88	uart.axf
Written checksum 0xefffd637 at offset 0x1c in file uart.bin
Previous value 0x00000000 at offset 0x1c in file uart.bin
 
14:56:45 **** Incremental Build of configuration Debug for project DDL_Lab5_UART ****
make -r -j2 all 
Building file: ../src/uart_main.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -D__USE_CMSIS -DDEBUG -D__CODE_RED -I../cmsis -I../config -I../driver -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/uart_main.d" -MT"src/uart_main.o" -MT"src/uart_main.d" -o "src/uart_main.o" "../src/uart_main.c"
Finished building: ../src/uart_main.c
 
Building target: uart.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -Xlinker -Map=uart.map -Xlinker --gc-sections -mcpu=cortex-m0 -mthumb -T "../linker/lpc1114_flash_crp.ld" -o "uart.axf"  ./startup/cr_startup_lpc11.o  ./src/uart_main.o  ./driver/adc.o ./driver/can.o ./driver/crp.o ./driver/gpio.o ./driver/timer32.o ./driver/uart.o  ./cmsis/core_cm0.o ./cmsis/system_LPC11xx.o   
Finished building target: uart.axf
 
make --no-print-directory post-build
Performing post-build steps
arm-none-eabi-size uart.axf; arm-none-eabi-objcopy -O binary uart.axf uart.bin ; checksum -p LPC1114_302 -d uart.bin;
   text	   data	    bss	    dec	    hex	filename
   3620	     16	     84	   3720	    e88	uart.axf
Written checksum 0xefffd637 at offset 0x1c in file uart.bin
Previous value 0x00000000 at offset 0x1c in file uart.bin
 
